# BLDC

./: .gitignore  .gitmodules  EmbeddedTools.md  readme.md  vscode配置说明.md
DOC/: Calculators.xlsx  FOC开发过程记录.xlsx  svpwm.md  框架图.drawio  电机中电流及功率相关计算.md
DOC/HALL及Encoder/: 霍尔传感器及ABZ编码器.md
HardWare/: Driver.kicad_sch  Driver.kicad_sch-bak  STM32G431CBT6.kicad_pcb  STM32G431CBT6.kicad_prl  STM32G431CBT6.kicad_pro  STM32G431CBT6.net  STM32G431CBT6.xml  fp-info-cache  schematic-positions-to-layout.debug  采购BOM.xlsx
HardWare/Gerber/: STM32G431CBT6-B_Paste.gbr  STM32G431CBT6-F_Cu.gbr  STM32G431CBT6-F_Mask.gbr  STM32G431CBT6-F_Paste.gbr  STM32G431CBT6-F_Silkscreen.gbr  STM32G431CBT6-NPTH.drl  STM32G431CBT6-PTH.drl  STM32G431CBT6-job.gbrjob
HardWare/V1.0.0/: Driver.kicad_sch  Main_Board.kicad_sch  STM32G431CBT6.kicad_prl  STM32G431CBT6.kicad_pro  STM32G431CBT6.kicad_sch  ~STM32G431CBT6.kicad_sch.lck
HardWare/bom/: ibom.html
HardWare/past_dxf/: fd6288_1.0.3_past.STL
HardWare/production/: Bom_G431_FD6288_V1.0.3.csv  netlist.ipc
HardWare/v1.0.1/: MC_G431C8.kicad_pro
Machine/: ~$底座_02.SLDPRT  垫片.SLDPRT  垫片.STL  底座.3mf  底座.SLDPRT  底座.STL  底座_01.SLDPRT  底座_01.STL  底座_02.3mf  底座_02.SLDPRT  底座_02.STL  旋转台.3mf  旋转台.SLDPRT  旋转台.STL  零件1.SLDPRT  零件2.SLDPRT  零件2.STL
QT/: .gitignore  readme.md
SoftWare/: .gitignore  .mxproject  Makefile  STM32G431.ioc  gdb.gdb  jlink.jlink  makefile  readme.md
SoftWare/Actuator/: actuator.c  actuator.h  actuator_template.c  actuator_template.h
SoftWare/BLDCMotor/: Readme.md  S型加减速.md  bldcmotor.h  bldcmotor_cfg.h  focmethod.c  focmethod.h  focmethod_q15.c  hall_sensor.md  mc_angle.c  mc_angle.h  mc_commend.c  mc_commend.h  mc_currmentloop.c  mc_currmentloop.h  mc_currmentmode.c  mc_currmentmode.h  mc_encoder.c  mc_encoder.h  mc_encoderopmode.c  mc_focmath.c  mc_focmath.h  mc_focmathQ.c  mc_loop.c  mc_loop.h  mc_loop_open.c  mc_loop_open.h  mc_openloop.c  mc_openloop.h  mc_posloop.c  mc_posloop.h  mc_posmode.c  mc_posmode.h  mc_protocol.c  mc_protocol.h  mc_smo.c  mc_smo.h  mc_smo.md  mc_speedloop.c  mc_speedloop.h  mc_speedmode.c  (+25 more)
SoftWare/Common/: _common.h  app_cfg.h  macro_defined.h  type_defined.h
SoftWare/Hardware/: abs_sensor.c  abs_sensor.h  as5047.c  as5047.h  at24c0x.c  at24c0x.h  hall_sensor.c  hall_sensor.h  ian226.c  ina226.h  mt6816.c  mt6816.h  tac9539pwr.h  tca9539pwr.c
SoftWare/I2cBus/: i2c_bus.h  i2c_device.c  i2c_device.h  readme.md
SoftWare/Inc/: stm32g4xx_hal_conf.h  stm32g4xx_it.h
SoftWare/MacroDefinition/: main.c  output.i  readme.md
SoftWare/Protocol/: cmdmap.c  cmdmap.h  commend.h  frame.c  frame.h  prot_send.c  prot_send.h  protocol.c  protocol.h  protocol.md  protocol_cfg.h  protocol_cmdmap.c  protocol_cmdmap.h  protocol_comment.h  protocol_frame.c  protocol_frame.h  protocol_msgmap.c  protocol_process.c  protocol_transmit.c  protocol_transmit.h  reciveprocess.c  voft.c  voft.h  (+1 more)
SoftWare/STM32G431CBUx/cmake/stm32cubemx/: CMakeLists.txt
SoftWare/STM32G431CBUx/motorlib/: CMakeLists.txt  motor.c  motor.h  motor_cfg.c  motor_cfg.h  motor_cfg_hmt.c  motor_currment_carible.c  motor_currment_carible.h  motor_mode.c  motor_params.c  motor_params.h  motor_pp_ident.c  motor_pp_ident.h  motor_state.c  motor_state.h
SoftWare/STM32G431CBUx/motorlib/bsp/: CMakeLists.txt  stm32_as5047.c  stm32_as5047.h  stm32_mt6816.c  stm32_mt6816.h  stm32_pwm.c  stm32_pwm_eulr.c
SoftWare/STM32G431CBUx/motorlib/carible/: CMakeLists.txt  _current_calib.c  _current_calib.h  _currment_carible.c  _currment_carible.h  _encoder_calib.c  _encoder_calib.h  _encoder_calib_lut.c  _encoder_calib_lut.h  _encoder_carible.c  _encoder_carible.h  _pp_ident.c  _pp_ident.h  carlib_cfg.h  motor_carible.c  motor_carible.h  readme.md  resistance_inductance_calib.c  resistance_inductance_calib.h
SoftWare/STM32G431CBUx/motorlib/driver/: currsmp.c  currsmp.h  ekf.c  ekf.h  feedback.c  feedback.h  inverter.c  inverter.h  pll.c  pll.h
SoftWare/STM32G431CBUx/motorlib/foc/: CMakeLists.txt  coord_transform.h  foc.c  foc.h  foc_data.c  foc_data.h  foc_parameters.c  foc_parameters.h  foc_pid.c  foc_pid.h  foc_trajectory_plan.c  foc_trajectory_plan.h  lpf.c  lpf.h  openloop_voltage.c  openloop_voltage.h  pp_ident.h  svpwm.c  svpwm.h  t.c  t.h  t_trajectory.c  t_trajectory.h  t_trajectory_test.c  test.c
SoftWare/STM32G431CBUx/motorlib/foc/coord_transform/: coord_transform.c  coord_transform.h
SoftWare/STM32G431CBUx/motorlib/foc/svpwm/: readme.md  svpwm.c  svpwm_.c  svpwm_.h
SoftWare/STM32G431CBUx/motorlib/statemachine/: statemachine.h
SoftWare/STM32G431CBUx/motorlib/test/c/: test_voltage_modulation.c  test_voltage_modulation.h
SoftWare/STM32G431CBUx/motorlib/test/python/: alpha_beta_viewer.py  load_data.py  main.py  observe_alpha_beta.py  observe_duty_waveform.py  readme.md  voltage_modulation_log.csv
(+1721 files in other folders)
